# web-file-browser

./: .gitignore  TODO.txt
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.jsx  index.css
client/src/components/: Login.js  Login.jsx  Main.js  MainContainer.jsx  Register.js  Register.jsx  Welcome.jsx
client/src/icons/: languages.ts  supportedExtensions.ts  supportedFolders.ts
server/: .flaskenv  pyproject.toml
server/server/: api.py  app.py  auth.py  models.py
server/server/utils/: createId.py
