[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["IgnacioPCWSL <i.cassdolopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
bcrypt = "^4.1.3"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
